# KC_DMS

./: .gitignore  CMakeLists.txt  README.md  clean.sh
res/grafana/: KC_DMS.sql  emqx.sql  mqtt.sql  数据监测系统历史数据-1684409939021.json  数据监测系统实时数据-1684409930172.json  服务器状态-1684409947963.json
res/mqtt_data/: kc_dms.json  kc_dms.schema.json
src/main/: CMakeLists.txt
src/main/callback/: ap3216c_cb.c  beep_cb.c  dht11_cb.c  fire_cb.c  icm20608_cb.c  led_cb.c  light_cb.c
src/main/event_handler/: ap3216c_eh.c  beep_eh.c  dht11_eh.c  fire_eh.c  icm20608_eh.c  led_eh.c  light_eh.c
src/main/inc/: kc_dms.h  kc_dms_version.h  mqtt_config.h  msg_data.h
src/main/src/: kc_dms.c
src/main/tools/: tools.c
src/test_cJSON/: CMakeLists.txt
src/test_easylogger/: CMakeLists.txt
src/test_mqttclient/: CMakeLists.txt  ap3216c_cb.c  client.c  dht11_cb.c  fan_cb.c  fire_cb.c  icm20608_cb.c  kc_dms.c  kc_dms.h  led_cb.c  light_cb.c  mqtt.c  mqtt_config.h
src/test_rxi_ini/: CMakeLists.txt
src/test_rxi_log/: CMakeLists.txt
src/test_threadpool/: CMakeLists.txt  test_threadpool.c
src/test_yyjson/: CMakeLists.txt
